Fixed language level issue in java 21